# ink

./: .gitignore  CMakeLists.txt  README.md  ast.cpp  ast.h  codegen.cpp  codegen.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  test.cpp  todo.txt  typecheck.cpp  typecheck.h  utils.cpp  utils.h
src/: ast.cpp  ast.h  codegen.cpp  codegen.h  errors.cpp  errors.h  file_table.cpp  file_table.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  sizer.cpp  sizer.h  test.cpp  typecheck.cpp  typecheck.h  utils.cpp  utils.h
tests/: pointers-read.ink  print-string
tests/comments/: 1  1.ink  2
tests/comparisons/: 1  1.ink  2.ink  char.ink  float.ink  string
tests/control-flow/: factorial  for-1  for-2.ink  if-1.ink  if-2  if-3.ink  if-4  if-5  if-6.ink  if-7  if-8  if-9  while-1
tests/errors/: invalid-function-call-1  scope-1  (+24 more)
tests/errors-syntax/: assignment-to-literal  for-invalid-1  for-invalid-2  for-invalid-3  for-invalid-4.ink  if-condition-statement.ink  if-missing-body.ink  if-missing-condition-1.ink  if-missing-condition-2  incomplete-expression-1  incomplete-expression-2  incomplete-expression-2.ink  incomplete-expression-3  invalid-char-literal.ink  invalid-directive  invalid-expression  invalid-expression.ink  invalid-function-declaration  invalid-function-return-type  invalid-struct-declaration  link-missing-quotes.ink  missing-function-arguments  missing-function-arguments.ink  missing-function-return-type  struct-missing-name.ink  unrecognised-token  unrecognised-token.ink  while-condition-statement  while-missing-body  while-missing-condition-1.ink  while-missing-condition-2
tests/errors-typecheck/: assignment-1.ink  assignment-2.ink  assignment-3  assignment-4.ink  binary-operator-1.ink  binary-operator-2  binary-operator-3  binary-operator-4.ink  binary-operator-5  for-body.ink  for-condition-type.ink  for-increment  for-init.ink  function-param-1.ink  function-return-1  function-return-2  function-return-3  function-return-4.ink  function-return-5.ink  function-return-6  function-return-7.ink  function-return-8  function-type-1.ink  function-type-2  global-variable-1  global-variable-2.ink  if-branch-1  if-branch-2.ink  if-condition-type.ink  indirection-1  indirection-2.ink  indirection-3.ink  indirection-4.ink  main-function-type  while-body  while-condition-type.ink
(+69 files in other folders)
